# InvoiceManager

./: .gitmodules  AboutPage.cpp  AboutPage.h  AddressForm.cpp  AddressForm.h  AddressForm.ui  CMakeLists.txt  ClientModel.cpp  ClientModel.h  Company.cpp  Company.h  CompanyData.h  CompanyDetailsWidget.cpp  CompanyDetailsWidget.h  CompanyDetailsWidget.ui  CreatePage.cpp  CreatePage.h  CreatePage.ui  DataHandlerWidget.cpp  DataHandlerWidget.h  DataHandlerWidget.ui  DatabaseForm.cpp  DatabaseForm.h  DatabaseForm.ui  DbStatusForm.cpp  DbStatusForm.h  DbStatusForm.ui  FileResourceAddWidget.cpp  FileResourceModel.cpp  FileResourceModel.h  GuiUtils.cpp  GuiUtils.h  InitialDataForm.cpp  InitialDataForm.h  InitialDataForm.ui  InvoiceData.cpp  InvoiceData.h  InvoiceDbController.cpp  InvoiceDbController.h  InvoiceDetail.cpp  (+38 more)
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  linux-build.yml
InvoiceCLI/: CMakeLists.txt
InvoiceCli/: CMakeLists.txt
InvoiceCli/src/: CliParametersDefinitions.h  Commands.cpp  Commands.h  CreateFromLastCommand.cpp  CreateFromLastCommand.h  CreatePdfCommand.cpp  CreatePdfCommand.h  InvoicePrinter.cpp  InvoicePrinter.h  SelectCliParamHandler.cpp  SelectCliParamHandler.h  ShowCommand.cpp  ShowCommand.h  Tools.cpp  Tools.h  commandlinemanager.cpp  commandlinemanager.h  main.cpp
InvoiceCli/src/Commands/: AbstractCommand.cpp  AbstractCommand.h  CreateFromLastCommand.cpp  CreateFromLastCommand.h  CreatePdfCommand.cpp  CreatePdfCommand.h  InvoiceCommands.cpp  InvoiceCommands.h  ListCommand.cpp  ListCommand.h
InvoiceGUI/: CMakeLists.txt  InvoiceModule
InvoiceGUI/src/ui/: CompanyDetailsWidget.ui  CreatePage.h  CreatePage.ui  DataHandlerWidget.h  InvoiceViewWidget.cpp  MainPage.cpp  MainPage.h  MorePage.cpp  MorePage.h  mainwindow.h  mainwindow.ui
InvoiceGui/: CMakeLists.txt
InvoiceGui/data/: completeTemplate.html  template.html
InvoiceGui/src/: ClientModel.cpp  ClientModel.h  FileResourceModel.cpp  FileResourceModel.h  InvoiceModel.cpp  main.cpp
InvoiceGui/src/ui/: AboutPage.h  ChartsPage.cpp  ChartsPage.h  ChartsPage.ui  CompanyDetailsDialog.cpp  CompanyDetailsDialog.h  CompanyDetailsDialog.ui  CompanyDetailsWidget.cpp  CompanyDetailsWidget.h  ConfirmRemoveDialog.cpp  ConfirmRemoveDialog.h  ConfirmRemoveDialog.ui  CreatePage.cpp  CreatePage.h  DataHandlerWidget.cpp  DataHandlerWidget.h  FileResourceDialog.cpp  FileResourceDialog.h  FileResourceDialog.ui  GuiUtils.cpp  GuiUtils.h  InvoiceSortProxyModel.h  InvoiceViewDialog.cpp  InvoiceViewDialog.h  InvoiceViewDialog.ui  InvoiceViewWidget.cpp  InvoiceViewWidget.h  InvoiceViewWidget.ui  MainPage.cpp  MainPage.h  MainPage.ui  MorePage.cpp  MorePage.h  MorePage.ui  NewDataDialog.ui  NewInvoicePage.cpp  NewInvoicePage.h  NewInvoicePage.ui  SettingsPage.cpp  SettingsPage.ui  (+3 more)
InvoiceLib/: CMakeLists.txt  InvoiceLib_en_GB.ts
InvoiceLib/include/: CompanyChildMap.h  CompanyData.h  DbMigrator.h  IdParentingMap.h  IncomeHistory.h  InvoiceData.h  InvoiceDbController.h  InvoiceDetail.h  InvoiceDetailsModel.h  InvoiceDocument.h  PdfConverter.h  Utils.h  WkPdfConverter.h
InvoiceLib/include/wkhtmltopdf/lib/: converter.h  converter_p.h  imageconverter.hh  imageconverter_p.hh  loadsettings.hh  multipageloader.h  multipageloader_p.h  pdf_c_bindings_p.hh  pdfconverter.h  pdfconverter_p.h
InvoiceLib/include/wkhtmltopdf/shared/: arghandler.inl  outputter.h  progressfeedback.h
InvoiceLib/src/: CompanyChildMap.cpp  DbMigrator.cpp  IdParentingMap.cpp  IncomeHistory.cpp  InvoiceData.cpp  InvoiceDbController.cpp  InvoiceDetail.cpp  InvoiceDetailsModel.cpp  InvoiceDocument.cpp  PdfConverter.cpp  Utils.cpp  WkPdfConverter.cpp
InvoiceLib/src/wkhtmltopdf/lib/: converter.cpp  multipageloader.cpp  pdf_c_bindings.cc  pdfconverter.cpp  utilities.cpp
InvoiceLib/src/wkhtmltopdf/pdf/: wkhtmltopdf.cc
InvoiceLib/src/wkhtmltopdf/shared/: arghandler.cc  commandlineparserbase.cc  commonarguments.cc  commondocparts.cc  htmloutputter.cc  manoutputter.cc  outputter.cc  progressfeedback.cpp  textoutputter.cc
InvoiceModule/: CMakeLists.txt  InvoiceModule_en_GB.ts
InvoiceModule/include/: InvoiceData.h  InvoiceDbController.h
InvoiceModule/src/: CompanyData.cpp  InvoiceDbController.cpp
InvoiceTests/: CMakeLists.txt
InvoiceTests/src/: InvoiceDbControllerTests.cpp  TestUtilities.cpp  TestUtilities.h  main.cpp  tests.cpp
data/: libreoffice.css
dockertesting/: Dockerfile-qt
scripts/: generateLinuxPackage.sh
src/: ClientModel.cpp  ClientModel.h  CompanyData.cpp  CompanyData.h  FileResourceModel.cpp  FileResourceModel.h  InvoiceDbController.cpp  InvoiceDbController.h  InvoiceModel.cpp  InvoiceModel.h  main.cpp
src/ui/: AboutPage.cpp  AboutPage.ui  CompanyDetailsDialog.cpp  CompanyDetailsDialog.h  CompanyDetailsWidget.cpp  CompanyDetailsWidget.h  CreatePage.h  DataHandlerWidget.cpp  DataHandlerWidget.h  DbStatusForm.cpp  DbStatusForm.h  FileResourceAddWidget.cpp  FileResourceAddWidget.h  FileResourceAddWidget.ui  GuiUtils.h  InvoiceSortProxyModel.cpp  InvoiceSortProxyModel.h  InvoiceViewDialog.cpp  InvoiceViewDialog.h  InvoiceViewDialog.ui  InvoiceViewWidget.h  MainPage.cpp  MainPage.h  MainPage.ui  MorePage.cpp  MorePage.h  NewDataDialog.cpp  NewDataDialog.h  NewInvoicePage.cpp  NewInvoicePage.h  NewInvoicePage.ui  SettingsPage.cpp  SettingsPage.h  TitleBarWidget.cpp  TitleBarWidget.h  mainwindow.cpp  mainwindow.h
